# BigArms

./: README.md  pyproject.toml
bigarms/: __init__.py  capability_enforcer.py  models.py  orchestrator.py  sandbox_manager.py  tool_registry.py
bigarms/windows/: __init__.py  ipc.py  job_object.py  vhdx.py  wfp.py
tests/: test_capability_enforcer.py  test_models.py  test_orchestrator.py  test_sandbox_manager.py  test_tool_registry.py
