[project]
name = "bigarms"
version = "0.5.0"
description = "BigArms v0.5 - Windows Execution Kernel for Mini Von"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
windows = [
    "pywin32>=306; sys_platform == 'win32'",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"